--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <section class="hero-section">
     <div class="hero-container">
    <div class="hero-image">
-     <img src="./images/image.jpg" alt="picture of Philia">
+     <img src="./images/image1.jpeg" alt="picture of Philia" class="image">
    </div>
    <div class="hero-text">
     <h1 class="title">Hi, I am Philia, Front-end Developer</h1>
