--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
    <!-- Hero Section -->
   <section class="hero-section">
     <div class="hero-container">
-   <div class="hero-image">
-     <img src="./images/image1.jpeg" alt="picture of Philia" class="image">
+   <div class="image_wrapper">
+     <img src="./images/linkedin.jpg" alt="picture of Philia" class="hero-image">
    </div>
    <div class="hero-text">
     <h1 class="title">Hi, I am Philia, Front-end Developer</h1>
@@ -88,38 +88,38 @@
         <h2 class="featured-title">Featured Works</h2>
         <div class="flex_wrapper">
         <div class="wrapper">
-          <img src="./images/dashboard.svg" alt="image of work" class="image">
+          <img src="./images/dashboard.svg" alt="image of work" class="featured-image">
           <div class="content_container">
             <h4 class="work-title">Designing Dashboards</h4>
             <div class="year-name">
               <p class="year">2020</p>
               <p class="name">Dashboard</p>
             </div>
-              <p class="description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+              <p class="featured-description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
           </div>
         </div>
 
         <div class="wrapper">
-          <img src="./images/portrait.svg" alt="image of work" class="image">
+          <img src="./images/portrait.svg" alt="image of work" class="featured-image">
           <div class="content_container">
             <h4 class="work-title">Vibrant Portraits of 2020</h4>
             <div class="year-name">
               <p class="year">2018</p>
               <p class="name">Illustration</p>
             </div>
-              <p class="description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+              <p class="featured-description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
           </div>
         </div>
 
         <div class="wrapper">
-          <img src="./images/Malayalam.svg" alt="image of work" class="image">
+          <img src="./images/Malayalam.svg" alt="image of work" class="featured-image">
           <div class="content_container">
             <h4 class="work-title">36 Days of Malayalam type</h4>
             <div class="year-name">
               <p class="year">2018</p>
               <p class="name">Typography</p>
             </div>
-              <p class="description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+              <p class="featured-description">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
           </div>
         </div>
         </div>
@@ -129,11 +129,21 @@
     <!-- Footer Section -->
     <footer>
       <div class="footer-container">
-        <div class="socials">
-          <img src="./images/fb.svg" alt="facebook icon" class="icon">
-          <img src="./images/insta.svg" alt="instagram icon" class="icon">
-          <img src="./images/twitter.svg" alt="twitter icon" class="icon">
-          <img src="./images/Linkedin.svg" alt="linkedin icon" class="icon">
+        <div>
+          <ul class="socials">
+            <li>
+              <a href=""><img src="./images/fb.svg" alt="facebook icon" class="icon"></a>
+            </li>
+            <li>
+              <a href=""><img src="./images/insta.svg" alt="instagram icon" class="icon"></a>
+            </li>
+            <li>
+              <a href=""><img src="./images/twitter.svg" alt="twitter icon" class="icon"></a>
+            </li>
+            <li>
+              <a href=""><img src="./images/Linkedin.svg" alt="linkedin icon" class="icon"></a>
+            </li>
+          </ul>  
         </div>
         <div class="copyright">
           Copyright ©2023 All rights reserved 
