added color to logo

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="navbar">
           <!-- Logo -->
           <div class="logo">
-            <a href="#">PH</a>
+            <a href="#" class="logo-text">PH</a>
           </div>
           <!-- Menu Button for Small Screens -->
           <div class="menu-button">
