--- a/index.html
+++ b/index.html
@@ -60,24 +60,27 @@
           />
         </div>
         <div class="hero-text">
-          <h1 class="title">Hi, I am Philia, Front-end Developer</h1>
+          <h1 class="title">
+            Hi, I am Philia, Your Front-End Developer for Modern Web Solutions
+          </h1>
           <p class="description">
-            With 3 years of experience in collaborative, fast-paced
-            environments, I specialize in crafting visually engaging and
-            user-centered web applications. Skilled in HTML, CSS, JavaScript,
-            React, and TypeScript, I transform complex requirements into
-            streamlined, responsive solutions that elevate user engagement. My
-            commitment to efficiency and staying current with industry trends
-            has led to a 15% reduction in feature development time and an
-            overall 10% improvement in application performance, delivering
-            impactful results for both users and stakeholders.
+            With 3 years in collaborative, fast-paced environments, I craft
+            visually engaging, user-centered web applications. Skilled in HTML,
+            CSS, JavaScript, React, and TypeScript, I turn complex requirements
+            into responsive solutions that boost user engagement. My focus on
+            efficiency and industry trends has cut feature development time by
+            15% and improved application performance by 10%, creating meaningful
+            results for users and stakeholders.
+            <br />
+            Want to see more about my experience, skills, and past projects?
+            Download my full CV below for a detailed look at my career journey.
           </p>
           <a
             href="https://docs.google.com/document/d/1l6xoK8Hgolc5fgf9dnQdEOZU3knR2meX/edit?usp=sharing&ouid=105134390569711132621&rtpof=true&sd=true"
             target="_blank"
             class="hero-btn"
           >
-            Download Resume
+            Download CV
           </a>
         </div>
       </div>
@@ -137,7 +140,7 @@
               class="featured-image"
             />
             <div class="content_container">
-              <h4 class="work-title">Service Management App</h4>
+              <h4 class="work-title">Pulse Service Management App</h4>
               <div class="project-container">
                 <a
                   href="https://pulsedapp.com/"
@@ -145,12 +148,18 @@
                   class="view-project"
                   >View Project</a
                 >
-                <p class="name">Pulse</p>
+                <p class="stack">
+                  <strong>Stacks:</strong> ReactJS, React Bootstrap, Styled
+                  Components, Formik
+                </p>
               </div>
               <p class="featured-description">
-                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-                amet sint. Velit officia consequat duis enim velit mollit.
-                Exercitation veniam consequat sunt nostrud amet.
+                I developed Pulse, an 8-page app built in two months to help
+                enterprises showcase their services and benefits, encouraging
+                user sign-ups. With user-friendly interfaces that answer common
+                client questions, Pulse increased sign-ups by 20% and
+                streamlined service processes, making it an effective tool for
+                engaging new customers.
               </p>
             </div>
           </div>
@@ -162,7 +171,7 @@
               class="featured-image"
             />
             <div class="content_container">
-              <h4 class="work-title">Restaurant App</h4>
+              <h4 class="work-title">Aggies Bar and Grill Restaurant App</h4>
               <div class="project-container">
                 <a
                   href="https://aggiesbargrill.com/"
@@ -170,12 +179,17 @@
                   class="view-project"
                   >View Project</a
                 >
-                <p class="name">Aggies Bar and Grill Restaurant</p>
+                <p class="stack">
+                  <strong>Stacks:</strong> NextJS, Styled Components, Formik
+                </p>
               </div>
               <p class="featured-description">
-                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-                amet sint. Velit officia consequat duis enim velit mollit.
-                Exercitation veniam consequat sunt nostrud amet.
+                I developed a 6-page app over three months to drive physical
+                visits to Aggies Bar & Grill. The app includes a reservations
+                feature powered by a custom API, allowing customers to easily
+                book tables in advance. A contact page API also enables
+                customers to share feedback, comments, or suggestions, boosting
+                engagement and improving customer service.
               </p>
             </div>
           </div>
@@ -187,7 +201,7 @@
               class="featured-image"
             />
             <div class="content_container">
-              <h4 class="work-title">Robotics App</h4>
+              <h4 class="work-title">Inovtech STEM Education App</h4>
               <div class="project-container">
                 <a
                   href="https://inovtechsc.com/"
@@ -195,12 +209,17 @@
                   class="view-project"
                   >View Project</a
                 >
-                <p class="name">Inovtech</p>
+                <p class="stack">
+                  <strong>Stacks:</strong> NextJS, Styled Components, Formik
+                </p>
               </div>
               <p class="featured-description">
-                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-                amet sint. Velit officia consequat duis enim velit mollit.
-                Exercitation veniam consequat sunt nostrud amet.
+                I collaborated on creating a 12-page web app in three months to
+                expand access to robotics-centered STEM education. By
+                implementing reusable components with styled components, we
+                increased productivity by 30%. The app also features an API on
+                the "Get Involved" page, allowing users to apply as volunteers,
+                which boosted STEM education accessibility by 20%.
               </p>
             </div>
           </div>
@@ -212,7 +231,7 @@
               class="featured-image"
             />
             <div class="content_container">
-              <h4 class="work-title">Hoodies E-Commerce App</h4>
+              <h4 class="work-title">Ogidi Brown Hoodies E-Commerce App</h4>
               <div class="project-container">
                 <a
                   href="https://hoodie-ecommerce.vercel.app/"
@@ -220,12 +239,17 @@
                   class="view-project"
                   >View Project</a
                 >
-                <p class="name">Ogidi Brown</p>
+                <p class="stack">
+                  <strong>Stacks:</strong> NextJS, Tailwind, Formik
+                </p>
               </div>
               <p class="featured-description">
-                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-                amet sint. Velit officia consequat duis enim velit mollit.
-                Exercitation veniam consequat sunt nostrud amet.
+                As part of a two-person team, I led the development of a 6-page
+                e-commerce app for Ogidi Brown. We created a seller center with
+                a custom API, allowing clients to advertise their products
+                directly on the platform. The streamlined shopping process
+                helped drive a 25% increase in both sales and customer
+                engagement, enhancing the overall user experience.
               </p>
             </div>
           </div>
@@ -245,12 +269,16 @@
                   class="view-project"
                   >View Project</a
                 >
-                <p class="name">Audiophile E-Commerce</p>
+                <p class="stack">
+                  <strong>Stacks:</strong> NextJS, Tailwind, Formik
+                </p>
               </div>
               <p class="featured-description">
-                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-                amet sint. Velit officia consequat duis enim velit mollit.
-                Exercitation veniam consequat sunt nostrud amet.
+                I developed a 5-page e-commerce app designed to provide
+                customers with easy access to detailed audiophile product
+                information and a smooth purchasing process. By enhancing the
+                shopping experience, the app contributed to a 15% increase in
+                sales and improved overall customer satisfaction.
               </p>
             </div>
           </div>
@@ -279,6 +307,7 @@
     <!-- Footer Section -->
     <footer>
       <div class="footer-container">
+        <p class="footer-title">Connect:</p>
         <div>
           <ul class="socials">
             <li>
