made footer year dynamic

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="styles/contact.css" />
     <link rel="stylesheet" href="./styles/footer.css" />
     <script src="https://unpkg.com/feather-icons"></script>
-    <script src="./js/navbar.js" defer></script>
+    <script src="./js/script.js" defer></script>
     <script type="application/json" src="./data.json" id="data"></script>
     <script src="./js/posts.js"></script>
   </head>
@@ -345,7 +345,9 @@
             </li>
           </ul>
         </div>
-        <div class="copyright">Copyright ©2024 All rights reserved</div>
+        <div class="copyright">
+          Copyright ©<span id="year"></span> All rights reserved
+        </div>
       </div>
     </footer>
   </body>
