--- a/index.html
+++ b/index.html
@@ -4,18 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Philia Hammond | Front-End Developer</title>
-    <meta name="description" content="Front-End Developer with 4+ years of experience crafting performant, user-centered React applications." />
+    <meta
+      name="description"
+      content="Front-End Developer with 4+ years of experience crafting performant, user-centered React applications."
+    />
     <meta name="author" content="Philia Hammond" />
 
-    <meta property="og:title" content="Philia Hammond | Front-End Developer" />
-    <meta property="og:description" content="Building clean, scalable web products that turn ideas into reliable user experiences." />
+    <meta property="og:title" content="Philia Hammond | Front-End Engineer" />
+    <meta
+      property="og:description"
+      content="Building clean, scalable web products that turn ideas into reliable user experiences."
+    />
     <meta property="og:type" content="website" />
 
     <meta name="twitter:card" content="summary_large_image" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
